css/alireza.css
body {
  font-family: "Biryani", sans-serif;
  letter-spacing: 0.0625em;
}

a {
  color: #c33c54;
}

a:focus,
a:hover {
  text-decoration: none;
  color: #3c6360;
}

.bg-black {
  background-color: #1c1f33 !important;
}

.bg-primary {
  background-color: #c33c54 !important;
}

.text-primary {
  color: #c33c54 !important;
}

.typewrite {
  font-family: "Special Elite", cursive;
  color: white;
  z-index: 9999;
  pointer-events: none;
}
#typewrite {
  z-index: 9999;
}

mx-auto .navfont {
  font-family: "Special Elite", cursive;
}

/* -----------------In header asli ke video bezari poshtesh age khasti------------------- */
.masthead {
  position: relative;
  width: 100%;
  height: auto;
  min-height: 35rem;
  padding: 15rem 0;
  background: #1c1f33;
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-size: cover;
}

.masthead h1 {
  color: #f4f6f6;
  font-family: "Catamaran", sans-serif;
  font-size: 2.5rem;
  line-height: 2.5rem;
  letter-spacing: 0.8rem;
}

.masthead h2 {
  max-width: 20rem;
  font-size: 1rem;
}
h2 {
  font-family: "Special Elite", cursive;
  color: white;
}
@media (min-width: 768px) {
  .masthead h1 {
    font-size: 4rem;
    line-height: 4rem;
  }
}

@media (min-width: 992px) {
  .masthead {
    height: 100vh;
    padding: 0;
  }
  .masthead h1 {
    font-size: 6.5rem;
    line-height: 6.5rem;
    letter-spacing: 0.8rem;
  }
  .masthead h2 {
    max-width: 30rem;
    font-size: 1.25rem;
  }
}

/* -----------------Section Who am I ------------------- */
.about-section {
  padding-top: 10rem;
  background: linear-gradient(
    to bottom,
    #1c1f33 0%,
    rgba(28, 31, 51, 0.9) 75%,
    rgba(28, 31, 51, 0.8) 100%
  );
}

.about-section p {
  margin-bottom: 5rem;
}
.text-white {
  padding-left: 10px;
}

/* -----------------Section project / Video ha ------------------- */
.projects-section {
  padding-top: 80px;
}

.projects-section .featured-text {
  padding: 2rem;
}

@media (min-width: 992px) {
  .projects-section .featured-text {
    padding: 0 0 0 2rem;
    border-left: 0.5rem solid #c33c54;
  }
}

.projects-section .project-text {
  padding: 3rem;
  font-size: 90%;
}

@media (min-width: 992px) {
  .projects-section .project-text {
    padding: 5rem;
  }
  .projects-section .project-text hr {
    border-color: #c33c54;
    border-width: 0.25rem;
    width: 30%;
  }
}

.card-title {
  color: #37718e;
}

/* -----------------Dokme ha------------------- */
.btn {
  box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
  padding: 1.25rem 2rem;
  font-family: "Catamaran", sans-serif;
  font-size: 80%;
  text-transform: uppercase;
  letter-spacing: 0.15rem;
  border: 0;
}

.btn-primary {
  background-color: #486f89;
}

.btn-primary:hover {
  background-color: #303345;
}

.btn-primary:focus {
  background-color: #4f837f;
  color: white;
}

.btn-primary:active {
  background-color: #467370 !important;
}

/* ----------------- section Publication va CV------------------- */
.cardss {
  border-top: 0.5rem solid #c33c54;
  height: 100%;
}
.cardss:hover {
  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.45);
  transition: box-shadow 0.3s ease-in-out;
}

.card-text {
  color: rgba(0, 0, 0, 0.5) !important;
}

#publc {
  padding: 60px 0;
  margin-top: 60px;
  background: #1c1f33;
}

#publc .section-header h3,
#publc .section-header p {
  color: #fff;
}

#publc .card {
  background: #303345;
  border-color: #303345;
  border-radius: 10px;
  margin: 0 15px;
  padding: 15px 0;
  text-align: center;
  color: #fff;
  transition: 0.3s ease-in-out;
}

#publc .card:hover {
  background: #171a2a;
  border-color: #171a2a;
}

#publc .card h5 {
  font-size: 22px;
  font-weight: 600;
}

#publc .card p {
  font-size: 15px;
  color: white !important;
}
.pubb {
  border-left: 0.5rem solid #c33c54;
}

/* -----------------section art design------------------ */
.cardss {
  border-top: 0.5rem solid #c33c54;
  height: 100%;
}
.cardss:hover {
  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.45);
  transition: box-shadow 0.3s ease-in-out;
}

.card-text {
  color: rgba(0, 0, 0, 0.5) !important;
}

.art {
  padding: 60px 0;
  background: linear-gradient(
    to bottom,
    #1c1f33 0%,
    rgba(28, 31, 51, 0.9) 75%,
    rgba(28, 31, 51, 0.8) 100%
  );
}

.art .section-header h3,
.art .section-header p {
  color: #fff;
}

.art .card {
  background: #303345;
  border-color: #303345;
  margin: 0 15px;
  padding: 15px 0;
  text-align: center;
  color: #fff;
  transition: 0.3s ease-in-out;
  border-top: 0.5rem solid #c33c54;
}

.art .card:hover {
  background: #171a2a;
  border-color: #171a2a;
  border-top: 0.5rem solid #c33c54;
}

.art .card h5 {
  font-size: 22px;
  font-weight: 600;
  color: #aceaf3;
}

.art .card p {
  font-size: 15px;
  color: white !important;
}
.pubb {
  border-left: 0.5rem solid #c33c54;
}

/* -----------------Footer------------------- */
footer {
  padding: 5rem 0;
}
/* -----------------N a v i g a t i o n------------------- */

#mainNav {
  min-height: 56px;
  background-color: #fff;
}

#mainNav .navbar-toggler {
  font-size: 80%;
  padding: 0.75rem;
  color: #c33c54;
  border: 1px solid #c33c54;
}

#mainNav .navbar-toggler:focus {
  outline: none;
}

#mainNav .navbar-brand {
  color: #161616;
  font-weight: 700;
  padding: 0.9rem 0;
}

#mainNav .navbar-nav .nav-item:hover {
  color: fade(white, 80%);
  outline: none;
  background-color: transparent;
}

#mainNav .navbar-nav .nav-item:active,
#mainNav .navbar-nav .nav-item:focus {
  outline: none;
  background-color: transparent;
}

@media (min-width: 992px) {
  #mainNav {
    padding-top: 0;
    padding-bottom: 0;
    border-bottom: none;
    /* background-color: transparent; */
    background-color: #1c1f33;
    transition: background-color 0.3s ease-in-out;
  }
  #mainNav .navbar-brand {
    padding: 0.5rem 0;
    color: rgba(255, 255, 255, 0.5);
  }
  #mainNav .nav-link {
    transition: none;
    padding: 2rem 1.5rem;
    color: rgba(255, 255, 255, 0.5);
  }
  #mainNav .nav-link:hover {
    color: rgba(255, 255, 255, 0.75);
  }
  #mainNav .nav-link:active {
    color: white;
  }
  #mainNav.navbar-shrink {
    background-color: #fff;
  }
  #mainNav.navbar-shrink .navbar-brand {
    color: #161616;
  }
  #mainNav.navbar-shrink .nav-link {
    color: #161616;
    padding: 1.5rem 1.5rem 1.25rem;
    border-bottom: 0.25rem solid transparent;
  }
  #mainNav.navbar-shrink .nav-link:hover {
    color: #c33c54;
  }
  #mainNav.navbar-shrink .nav-link:active {
    color: #467370;
  }
  #mainNav.navbar-shrink .nav-link.active {
    color: #c33c54;
    outline: none;
    border-bottom: 0.25rem solid #c33c54;
  }
}

.logo {
  height: 50px;
}
.navbar-brand > img {
  height: 45px;
  padding: 1px;
  display: block;
}
/* 
#container canvas {
  pointer-events: auto;
  width: 100%;
  height: 100%;
  z-index: -9999;
  cursor: default;
} */

#container canvas {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  cursor: default;
}

